# gvip

./: .gitignore  ABOUT_THIS_TEMPLATE.md  CONTRIBUTING.md  Containerfile  HISTORY.md  MANIFEST.in  Makefile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: rename_project.sh
gvip/: __init__.py  __main__.py  base.py  cli.py  divergence.py  gvi.py  loss.py
tests/: test_base.py
